--- a/css/gems.css
+++ b/css/gems.css
@@ -1,4 +1,4 @@
-id="#ruby"
+/* Select the image with class of ruby */
 
 #ruby{
   position: absolute;
@@ -9,7 +9,7 @@ id="#ruby"
 
 /* Select the image with class of emerald */
 
-#emerald{
+.emerald{
   position: absolute;
   z-index: 2;
   top: 350px;
